# headscale-mullvad

./: .env.example  .gitignore  README.md  flake.nix  main.py  package.nix  pyproject.toml  requirements.txt
src/headscale_mullvad/: cli.py  config.py  main.py  utils.py
src/headscale_mullvad/api/: __init__.py  headscale.py  mullvad.py
